recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: not found: value lenght
    avance(lenght)
           ^Koch:27: error: not found: value snowside
    snowside(levels,length)
    ^