recursion.logo.lessons.recursion.logo.koch.Koch.scala.code
def snowFlake (levels:Int, length:Double) {
    snowSide(levels, length);
    right(120);
    setColor(Color.blue);
    snowSide(levels, length);
    right(120);
    setColor(Color.orange);
    snowSide(levels, length);
    right(120);
}
def snowSide(levels:Int, length:Double) {
  if(length==0){
    avance(lenght)
    
  }
  else{
    snowSide(levels-1,length)
    gauche(60)
    snowSide(levels-1,length)
    droite(120)
    snowSide(levels-1,length)
    gauche(60)
    snowSide(levels-1,length)
  }
  snowSide(levels,length)
    gauche(60)
    snowside(levels,length)
}